--- a/docs/content/pxfuserimpers.html.md.erb
+++ b/docs/content/pxfuserimpers.html.md.erb
@@ -2,9 +2,9 @@
 title: Configuring the Hadoop User, User Impersonation, and Proxying
 ---
 
-PXF accesses Hadoop services on behalf of Greenplum Database end users.
+PXF accesses Hadoop services on behalf of Greenplum Database end users. Impersonation is a way to present a Greenplum end user identity to a remote system. You can achieve this with PXF by configuring a Hadoop proxy user. When the Hadoop service is secured with Kerberos, you also have the option of impersonation using Kerberos constrained delegation.
 
-When user impersonation is enabled (the default), PXF accesses Hadoop services using the identity of the Greenplum Database user account that logs in to Greenplum and performs an operation that uses a PXF connector. Keep in mind that PXF uses only the _login_ identity of the user when accessing Hadoop services. For example, if a user logs in to Greenplum Database as the user `jane` and then execute `SET ROLE` or `SET SESSION AUTHORIZATION` to assume a different user identity, all PXF requests still use the identity `jane` to access Hadoop services. When user impersonation is enabled, you must explicitly configure each Hadoop data source (HDFS, Hive, HBase) to allow PXF to act as a proxy for impersonating specific Hadoop users or groups.
+When user impersonation is enabled (the default), PXF accesses non-secured Hadoop services using the identity of the Greenplum Database user account that logs in to Greenplum and performs an operation that uses a PXF connector. Keep in mind that PXF uses only the _login_ identity of the user when accessing Hadoop services. For example, if a user logs in to Greenplum Database as the user `jane` and then execute `SET ROLE` or `SET SESSION AUTHORIZATION` to assume a different user identity, all PXF requests still use the identity `jane` to access Hadoop services. When user impersonation is enabled, you must explicitly configure each Hadoop data source (HDFS, Hive, HBase) to allow PXF to act as a proxy for impersonating specific Hadoop users or groups.
 
 When user impersonation is disabled, PXF executes all Hadoop service requests as the PXF process owner (usually `gpadmin`) or the Hadoop user identity that you specify. This behavior provides no means to control access to Hadoop services for different Greenplum Database users. It requires that this user have access to all files and directories in HDFS, and all tables in Hive and HBase that are referenced in PXF external table definitions.
 
@@ -82,7 +82,7 @@ The following table identifies the `pxf.service.user.impersonation` and `pxf.ser
 
 ## <a id="pxf_cfg_user"></a>Configure the Hadoop User
 
-By default, PXF accesses Hadoop using the identity of the Greenplum Database user, and you are required to set up a proxy Hadoop user. You can configure PXF to access Hadoop as a different user on a per-server basis.
+By default, PXF accesses Hadoop using the identity of the Greenplum Database user. You can configure PXF to access Hadoop as a different user on a per-server basis.
 
 Perform the following procedure to configure the Hadoop user:
 
@@ -92,7 +92,7 @@ Perform the following procedure to configure the Hadoop user:
     $ ssh gpadmin@<gpmaster>
     ```
 
-2. Identify the name of the PXF Hadoop server configuration that you want to update.
+2. Identify the name of the Hadoop PXF server configuration that you want to update.
 
 3. Navigate to the server configuration directory. For example, if the server is named `hdp3`:
 
@@ -106,7 +106,7 @@ Perform the following procedure to configure the Hadoop user:
     gpadmin@gpmaster$ cp $PXF_HOME/templates/pxf-site.xml .
     ```
 
-5. Open the `pxf-site.xml` file in the editor of your choice, and configure the Hadoop user name. When impersonation is disabled, this name identifies the Hadoop user identity that PXF will use to access the Hadoop system. When user impersonation is enabled, this name identifies the PXF proxy Hadoop user. For example, if you want to access Hadoop as the user `hdfsuser1`, uncomment the property and set it as follows:
+5. Open the `pxf-site.xml` file in the editor of your choice, and configure the Hadoop user name. When impersonation is disabled, this name identifies the Hadoop user identity that PXF will use to access the Hadoop system. When user impersonation is enabled for a non-secure Hadoop cluster, this name identifies the PXF proxy Hadoop user. For example, if you want to access Hadoop as the user `hdfsuser1`, uncomment the property and set it as follows:
 
     ``` xml
     <property>
@@ -158,7 +158,7 @@ PXF user impersonation is enabled by default for Hadoop servers. You can configu
     </property>
     ```
 
-3. If you enabled user impersonation, you must configure Hadoop proxying as described in [Configure Hadoop Proxying](#hadoop). You must also configure [Hive User Impersonation](#hive) and [HBase User Impersonation](#hbase) if you plan to use those services.
+3. If you enabled user impersonation and Kerberos constrained delegation is disabled (the default), you must configure Hadoop proxying as described in [Configure Hadoop Proxying](#hadoop). You must also configure [Hive User Impersonation](#hive) and [HBase User Impersonation](#hbase) if you plan to use those services.
 
 4. Save the `pxf-site.xml` file and exit the editor.
 
@@ -171,7 +171,7 @@ PXF user impersonation is enabled by default for Hadoop servers. You can configu
 
 ## <a id="hadoop"></a>Configure Hadoop Proxying
 
-When PXF user impersonation is enabled for a Hadoop server configuration, you must configure Hadoop to permit PXF to proxy Greenplum users. This configuration involves setting certain `hadoop.proxyuser.*` properties. Follow these steps to set up PXF Hadoop proxy users:
+When PXF user impersonation is enabled for a Hadoop server configuration and Kerberos constrained delegation is disabled (the default), you must configure Hadoop to permit PXF to proxy Greenplum users. This configuration involves setting certain `hadoop.proxyuser.*` properties. Follow these steps to set up PXF Hadoop proxy users:
 
 1. Log in to your Hadoop cluster and open the `core-site.xml` configuration file using a text editor, or use Ambari or another Hadoop cluster manager to add or edit the Hadoop property values described in this procedure.
 
