--- a/docs/content/cfg_server.html.md.erb
+++ b/docs/content/cfg_server.html.md.erb
@@ -90,12 +90,13 @@ To configure a PXF server, refer to the connector configuration topic:
 
 PXF includes a template file named `pxf-site.xml` for PXF-specific configuration parameters. You can use the `pxf-site.xml` template file to specify Kerberos and/or user impersonation settings for server configurations, or to specify a base directory for file access.
 
-<div class="note">The Kerberos and user impersonation settings in this file apply only to Hadoop and JDBC server configurations; they do not apply to file system or object store server configurations.</div>
+<div class="note">The Kerberos and user impersonation settings in this file may apply only to Hadoop and JDBC server configurations; they do not apply to file system or object store server configurations.</div>
 
 You configure properties in the `pxf-site.xml` file for a PXF server when one or more of the following conditions hold:
 
 - The remote Hadoop system utilizes Kerberos authentication.
 - You want to enable/disable user impersonation on the remote Hadoop or external database system.
+- You want to enable/disable Kerberos constrained delegation for a Hadoop PXF server.
 - You will access a network file system with the server configuration.
 - You will access a remote Hadoop or object store file system with the server configuration, and you want to allow a user to access only a specific directory and subdirectories.
 
@@ -105,7 +106,8 @@ You configure properties in the `pxf-site.xml` file for a PXF server when one or
 |----------------|--------------------------------------------|---------------|
 | pxf.service.kerberos.principal | The Kerberos principal name. | gpadmin/\_HOST@EXAMPLE.COM |
 | pxf.service.kerberos.keytab | The file system path to the Kerberos keytab file. | $PXF_BASE/keytabs/pxf.service.keytab |
-| pxf.service.user.impersonation | Enables/disables user impersonation on the remote system. | If the `pxf.service.user.impersonation` property is missing from `pxf-site.xml`, the default is `true` (enabled) for PXF Hadoop servers and `false` (disabled) for JDBC servers. |
+| pxf.service.kerberos.constrained-delegation | Enables/disables [Kerberos constrained delegation](pxf_kerbhdfs.html#kcd). **Note:** This property is applicable only to Hadoop PXF server configurations, it is not applicable to JDBC PXF servers. | false |
+| pxf.service.user.impersonation | Enables/disables user impersonation when connecting to the remote system. | If the `pxf.service.user.impersonation` property is missing from `pxf-site.xml`, the default is `true` (enabled) for PXF Hadoop servers and `false` (disabled) for JDBC servers. |
 | pxf.service.user.name | The log in user for the remote system. | This property is commented out by default. When the property is unset, the default value is the operating system user that starts the pxf process, typically `gpadmin`. When the property is set, the default value depends on the user impersonation setting and, if you are accessing Hadoop, whether or not you are accessing a Kerberos-secured cluster; see the [Use Cases and Configuration Scenarios](pxfuserimpers.html#pxf_cfg_scenarios) section in the *Configuring the Hadoop User, User Impersonation, and Proxying* topic. |
 | pxf.fs.basePath | Identifies the base path or share point on the remote file system. This property is applicable when the server configuration is used with a profile that accesses a file. | None; this property is commented out by default. |
 | pxf.ppd.hive<sup>1</sup> | Specifies whether or not predicate pushdown is enabled for queries on external tables that specify the `hive`, `hive:rc`, or `hive:orc` profiles. | True; predicate pushdown is enabled. |
