docs - misc improvements and clarifications (#782)
* docs - misc improvements and clarifications

* specify endpoint; remove hdfsclient prompt

--- a/docs/content/pxfuserimpers.html.md.erb
+++ b/docs/content/pxfuserimpers.html.md.erb
@@ -115,6 +115,8 @@ Perform the following procedure to configure the Hadoop user:
     </property>
     ```
 
+    The Hadoop user `hdfsuser1` must exist in the Hadoop cluster.
+
 7. Save the `pxf-site.xml` file and exit the editor.
 
 8. Use the `pxf cluster sync` command to synchronize the PXF Hadoop server configuration to your Greenplum Database cluster:
