docs - remove refs to PXF cluster (#783)

--- a/docs/content/pxf_gpupgrade_pre.html.md.erb
+++ b/docs/content/pxf_gpupgrade_pre.html.md.erb
@@ -31,13 +31,13 @@ Before you run `gpupgrade`, perform the following steps:
 
     **Note:** The `pxf-pre-gpupgrade` script must connect to your running Greenplum Database 5.x cluster. By default, it attempts to connect to the `gpadmin` database on `localhost` on port `5432` as the `gpadmin` user (no password). If you need to customize these settings, refer to [Customizing the Greenplum Connection Parameters](#env) for instructions on setting environment variables for this purpose.
 
-1. Stop the PXF cluster; note that PXF external tables will be inaccessible during the Greenplum Database upgrade process.
+1. Stop PXF; note that PXF external tables will be inaccessible during the Greenplum Database upgrade process.
 
     ``` shell
     gpadmin@gpmaster$ /usr/local/pxf-gp5/bin/pxf cluster stop
     ```
 
-1. Your PXF cluster is ready for upgrading by `gpupgrade`; return to the `gpupgrade` documentation to upgrade from Greenplum Database 5.x to Greenplum Database 6.x.
+1. PXF is ready for upgrading by `gpupgrade`; return to the `gpupgrade` documentation to upgrade from Greenplum Database 5.x to Greenplum Database 6.x.
 
 
 ## <a id="env"></a>Customizing the Greenplum Connection Parameters
