--- a/docs/content/s3_objstore_cfg.html.md.erb
+++ b/docs/content/s3_objstore_cfg.html.md.erb
@@ -10,12 +10,12 @@ You can use PXF to access S3-compatible object stores. This topic describes how 
 
 To access data in an object store, you must provide a server location and client credentials. When you configure a PXF object store connector, you add at least one named PXF server configuration for the connector as described in [Configuring PXF Servers](cfg_server.html).
 
-PXF provides a configuration file template for each object store connector. These template files are located in the `$PXF_HOME/templates/` directory.
+PXF provides a configuration file template for each object store connector. These template files are located in the `<PXF_INSTALL_DIR>/templates/` directory.
 
 
 ## <a id="minio_cfg"></a>MinIO Server Configuration
 
-The template configuration file for MinIO is `$PXF_HOME/templates/minio-site.xml`. When you configure a MinIO server, you must provide the following server configuration properties and replace the template values with your credentials:
+The template configuration file for MinIO is `<PXF_INSTALL_DIR>/templates/minio-site.xml`. When you configure a MinIO server, you must provide the following server configuration properties and replace the template values with your credentials:
 
 | Property       | Description                                | Value |
 |----------------|--------------------------------------------|------ |
@@ -25,7 +25,7 @@ The template configuration file for MinIO is `$PXF_HOME/templates/minio-site.xml
 
 ## <a id="s3_cfg"></a>S3 Server Configuration
 
-The template configuration file for S3 is `$PXF_HOME/templates/s3-site.xml`. When you configure an S3 server, you must provide the following server configuration properties and replace the template values with your credentials:
+The template configuration file for S3 is `<PXF_INSTALL_DIR>/templates/s3-site.xml`. When you configure an S3 server, you must provide the following server configuration properties and replace the template values with your credentials:
 
 | Property       | Description                                | Value |
 |----------------|--------------------------------------------|-------|
@@ -162,7 +162,7 @@ In this procedure, you name and add a PXF server configuration in the `$PXF_BASE
 3. Copy the PXF template file for S3 to the server configuration directory. For example:
 
     ``` shell
-    gpadmin@gpmaster$ cp $PXF_HOME/templates/s3-site.xml $PXF_BASE/servers/s3srvcfg/
+    gpadmin@gpmaster$ cp <PXF_INSTALL_DIR>/templates/s3-site.xml $PXF_BASE/servers/s3srvcfg/
     ```
         
 4. Open the template server configuration file in the editor of your choice, and provide appropriate property values for your environment. For example:
